--- a/src/App.css
+++ b/src/App.css
@@ -10,31 +10,37 @@
     align-items: center;
     justify-content: center;
     height: 100%;
-    background-color: #424242;
 }
 
 .item {
     flex-grow: 1;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     padding: 10;
+    width: 100%;
 }
 
 .word {
-    display: flex;
-    flex-grow: 1;
-    font-size: 42px;
+    font-size: 3em;
     color: white;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     font-family: sans-serif;
-    margin-left: 20px;
-    margin-right: 20px;
+}
+
+.word-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.word-separator {
+	width: 3em;
+	height: 3px;
+	background: white;
+	margin: 1.5em 0;
 }
 
 .en {
-    border-top: 3px solid white;
 }
 
 button {
@@ -64,4 +70,27 @@ html, body, #root {
 
 body {
     margin: 0;
+    background-color: #424242;
+}
+
+.slide-appear:nth-child(even) {
+    margin-left: 100%;
+}
+
+.slide-appear:nth-child(odd) {
+    margin-left: -100%;
+}
+
+.slide-appear-done {
+    margin: 0;
+    transition: margin 300ms;
+}
+
+.wordList {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
